--- a/DevHabit.Api/DevHabit.Api.csproj
+++ b/DevHabit.Api/DevHabit.Api.csproj
@@ -1,13 +1,19 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
+	<PropertyGroup>
+	  <UserSecretsId>4acbaa1a-2d99-455d-9d7d-57be298673bd</UserSecretsId>
+	  <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+	  <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
-  </ItemGroup>
-
+	<ItemGroup>		
+		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" />		
+		<PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" />		
+		<PackageReference Include="OpenTelemetry.Extensions.Hosting" />		
+		<PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" />		
+		<PackageReference Include="OpenTelemetry.Instrumentation.Http" />		
+		<PackageReference Include="OpenTelemetry.Instrumentation.Runtime" />		
+		<PackageReference Include="Swashbuckle.AspNetCore" />
+	</ItemGroup>
 </Project>
+ 
