--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,10 +15,13 @@ jobs:
 
     defaults:
       run:
-        working-directory: DevHabit
+        working-directory: .
 
     steps:
       - uses: actions/checkout@v4
+
+      - name: Debug - List Files
+        run: ls -R
 
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
