api endpoints, problem details, upsert

--- a/DevHabit.Api/appsettings.Development.json
+++ b/DevHabit.Api/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Database": "Host=devhabit.postgres;Database=devhabit;Username=postgres;Password=postgres;Port=5432;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
