--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,6 @@
 version: '3.4'
 
+name: devhabit_app
 services:
   devhabit.api:
     image: ${DOCKER_REGISTRY-}devhabitapi
@@ -9,10 +10,26 @@ services:
     ports:
         - 4000:8080
         - 4001:8081
+    depends_on:
+        - devhabit.postgres
     environment:
     # SEQ
-    - OTEL_EXPORTER_OTLP_ENDPOINT=http://devhabit.seq:5341/ingest/otlp
-    - OTEL_EXPORTER_OTLP_PROTOCOL=http/protobuf
+    # - OTEL_EXPORTER_OTLP_ENDPOINT=http://devhabit.seq:5341/ingest/otlp
+    # - OTEL_EXPORTER_OTLP_PROTOCOL=http/protobuf
+      - OTEL_EXPORTER_OTLP_ENDPOINT=http://devhabit.aspire-dashboard:18889
+      - OTEL_EXPORTER_OTLP_PROTOCOL=grpc
+
+  devhabit.postgres:
+     image: postgres:17.2
+     environment:
+        POSTGRES_DB: devhabit
+        POSTGRES_USER: postgres
+        POSTGRES_PASSWORD: postgres
+     volumes:
+        - ./.containers/postgres_data:/var/lib/postgresql/data
+     ports:
+        - 5432:5432
+
   
   devhabit.seq:
     image: datalust/seq:2024.3 # or latest
@@ -30,5 +47,6 @@ services:
         DOTNET_DASHBOARD_UNSECURED_ALLOW_ANONYMOUS: true
     ports:
         - 18888:18888
+        
     
   
